moved all the add-exports to each module because of jfxtras-labs